# bsc23

./: pyproject.toml
.github/workflows/: ec2deploy.yml  main.yml  snyk_security_code_scanning.yml  synk_security.yml
Source/: manage.py  requirements.txt
bsc23grassroots/bsc23grassroots/: asgi.py  settings.py  urls.py  wsgi.py
